This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
3/4/22: Fixed "TILT SERIES TERMINATING" messages showing instead of message
boxes (In 4.0).

3/2/22: SEM_4-0-1
3/2/22: Got the 2/24 SEMCCD change on RotationAndFlip into package (In 4.0).

3/2/22: Fixed DM crashing when saving frames (In 4.0).

3/2/22: Fixed crashes opening multishot dialog with noScope/noCamera instance,
made it possible to turn on Low Dose also (In 4.0).

3/1/22: Fixed dose calibration being off by 4 for Apollo camera (In 4.0).

2/28/22: Made Navigator Acquire ignore early return setting if camera is not a
K2/K3 (In 4.0).

2/28/22: Fixed infinite loop when compensating beam tilt for image shift (In
4.0).

2/28/22: Made Navigator Acquire impose backlash when moving to point if stage
relaxation is selected (In 4.0).

2/25/22: SEM_4-0-0 stable
* 2/24/22: Changed RotationAndFlip value in .pcm files when aligning in IMOD to
-2, so that if nonnormalized files saved without reorientation are aligned in
IMOD 4.12.18 or higher, it will reorient the aligned sums properly.

2/24/22: Stopped renaming the 64-bit SEMCCD files to SEMCCD-GMS2-64.dll so
that it is more clear that the right version is present.

* 2/24/22: Sped up variable frame summing in SEMCCD plugin when saving
unnormalized frames.

2/24/22: Added an option to Filter Control panel to do Refine ZLP with Trial
in Low Dose.

* 2/24/22: JEOL scopes with original defaults for image shift delays will have
ISDelayScalingFactor set to 0.2 based on new measurements.

2/22/22: Fixed crash using multishot dialog with Navigator not open.

* 2/22/22: Made it possible to avoid making a temporary stack when doing K2/K3
early returns; early return will now show some or more benefit when using it
for multiple Records.
