@@ -411,28 +411,28 @@
       button click can be used to select the nearest point or polygon as the current 
       item, which is drawn with thicker lines in the display.&nbsp; In Edit mode:</P>
     <ul>
-      <li>Left button click will select the nearest point or polygon as the current 
+      <li><em>Left button click</em> will select the nearest point or polygon as the current 
         item.</li>
-      <li>Ctrl-left button click will <b>add</b> the nearest point or polygon to a list 
+      <li><em>Ctrl-left button click</em> will <b>add</b> the nearest point or polygon to a list 
         of selected items, or remove it from the list if it is already 
         selected.&nbsp; All selected items will be drawn with thicker lines.&nbsp; The
         <b>Delete Item</b> button can then be used to delete all points at once.</li>
-      <li>Ctrl-left button held down while moving the mouse will add points to the 
+      <li><em>Ctrl-left button held down</em> while moving the mouse will add points to the 
         selection as the mouses passes over or near them.</li>
-      <li>Left button double-click will delete the nearest point if it is already the 
+      <li><em>Left button double-click</em> will delete the nearest point if it is already the 
         current item, it is the only item selected, and the Ctrl or Shift key is not down.&nbsp; 
         To delete a point, you need to single-click to select it then double-click to 
         delete it.</li>
-      <li>Shift-left button double-click near one of the positions of a regular (non-custom) 
+      <li><em>Shift-left button double-click</em> near one of the positions of a regular (non-custom) 
         multiple Record 
         pattern around the current item will exclude that position from acquisition.&nbsp;
          When any position is excluded, this item is locked into recording the 
         multiple Record pattern set at the time of exlusion, even if the pattern is changed
          before acquisition.</li>
-      <li>Middle button click will add a point to the group to which the current point 
+      <li><em>Middle button click</em> will add a point to the group to which the current point 
         belongs.</li>
-      <li>Right button click will move the currently selected point to a new position.</li>
-      <li>Backspace will delete the currently selected point.</li>
+      <li><em>Right button click</em> will move the currently selected point to a new position.</li>
+      <li><em>Backspace</em> will delete the currently selected point.</li>
       <li><b>Add Points</b>, <b>Add Polygon</b>, and <b>Move Item</b> can still be used 
         in Edit mode, and the left button will no longer select a point during those 
         operations.</li>
@@ -450,7 +450,8 @@
           Focus area with the button in the Low Dose control panel but with dashed instead 
           of solid lines.&nbsp; The marker point will generally be placed at the center of 
           the Focus area.&nbsp; Clicking with the left mouse button to set the marker will 
-          move the Focus area.&nbsp; If the axis between Low Dose areas is not free to 
+          move the Focus area.&nbsp; (However, Ctrl-left click can still be used to select 
+          the nearest point.)&nbsp; If the axis between Low Dose areas is not free to 
           rotate, only the position on the tilt axis will change.&nbsp; If axis rotation 
           is enabled for this item&#39;s Focus position, the angle will be changed as well.</p>
       <p>
